--- a/android-crmtab/app/src/main/res/layout/fragment_consult_prospect.xml
+++ b/android-crmtab/app/src/main/res/layout/fragment_consult_prospect.xml
@@ -7,107 +7,202 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TableRow android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/prospect_tv_name"
-                />
-            <TextView android:id="@+id/tv_prospect_name"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/tv_prospect_name"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
         </TableRow>
-        <TableRow android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView android:layout_width="wrap_content"
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/prospect_tv_siret"
-                />
-            <TextView android:id="@+id/tv_prospect_siret"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/tv_prospect_siret"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
         </TableRow>
-        <TableRow android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView android:layout_width="wrap_content"
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/prospect_tv_finess"
-                />
-            <TextView android:id="@+id/tv_prospect_finess"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/tv_prospect_finess"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
         </TableRow>
-        <TableRow android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView android:layout_width="wrap_content"
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/prospect_tv_streetNumber"
-                />
-            <TextView android:id="@+id/tv_prospect_streetNumber"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/tv_prospect_streetNumber"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
         </TableRow>
-        <TableRow android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView android:layout_width="wrap_content"
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/prospect_tv_streetName"
-                />
-            <TextView android:id="@+id/tv_prospect_streetName"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/tv_prospect_streetName"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
         </TableRow>
-        <TableRow android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView android:layout_width="wrap_content"
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/prospect_tv_zipCode"
-                />
-            <TextView android:id="@+id/tv_prospect_zipcode"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/tv_prospect_zipcode"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
         </TableRow>
-        <TableRow android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView android:layout_width="wrap_content"
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/prospect_tv_town"
-                />
-            <TextView android:id="@+id/tv_prospect_town"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/tv_prospect_town"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
         </TableRow>
-        <TableRow android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView android:layout_width="wrap_content"
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/prospect_tv_website"
-                />
-            <TextView android:id="@+id/tv_prospect_website"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/tv_prospect_website"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
         </TableRow>
-        <TableRow android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView android:layout_width="wrap_content"
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/prospect_tv_etablishmentType"
-                />
-            <TextView android:id="@+id/tv_prospect_etablishmentType"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/tv_prospect_etablishmentType"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
         </TableRow>
-        <TableRow android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView android:layout_width="wrap_content"
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/prospect_tv_turnover"
-                />
-            <TextView android:id="@+id/tv_prospect_turnover"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/tv_prospect_turnover"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
         </TableRow>
     </TableLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_prospect_insert"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/prospect_bt_insert" />
+    </LinearLayout>
 
 </LinearLayout>
