--- a/android-crmtab/app/src/main/res/layout/activity_import_contact.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_import_contact.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context="fr.pds.isintheair.crmtab.mbalabascarin.uc.mock.contacts.view.ImportContactActivity"
+    tools:context=".view.activity.ImportContactActivity"
     android:background="#dddddc">
 
     <Button
