--- a/android-crmtab/app/src/main/res/layout/activity_visit.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_visit.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    tools:context="fr.pds.isintheair.crmtab.mbalabascarin.uc.edit.crv.view.VisitActivity">
+    tools:context=".view.activity.VisitActivity">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view1"
