--- a/android-phonintheair/app/src/main/res/layout/activity_dashboard.xml
+++ b/android-phonintheair/app/src/main/res/layout/activity_dashboard.xml
@@ -7,25 +7,120 @@
     android:orientation="vertical"
     tools:context=".view.activity.DashboardActivity">
 
-    <fragment
-        android:id="@+id/fragment_phone_info"
-        android:name="fr.pds.isintheair.phonintheair.view.fragment.PhoneInfoFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        tools:layout="@layout/fragment_phone_info"/>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:layout_weight="1"
+                  android:gravity="center"
+                  android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Etat de la connection : "/>
+
+            <ImageView
+                android:id="@+id/call_connection_state"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/green_circle"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Autorisation : "/>
+
+            <ImageView
+                android:id="@+id/call_autorisation_state"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/green_circle"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/black"/>
 
-    <fragment
-        android:id="@+id/fragment_calendar_info"
-        android:name="fr.pds.isintheair.phonintheair.view.fragment.CalendarInfoFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        tools:layout="@layout/fragment_calendar_info"/>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:layout_weight="1"
+                  android:gravity="center"
+                  android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Etat de la connection : "/>
+
+            <ImageView
+                android:id="@+id/calendar_connection_state"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/green_circle"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Autorisation : "/>
+
+            <ImageView
+                android:id="@+id/calendar_autorisation_state"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/green_circle"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Agenda choisi : "/>
+
+            <TextView
+                android:id="@+id/calendar_chosen_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="aucun"/>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/calendar_choice_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="Choisir un agenda"/>
+
+    </LinearLayout>
 
 </LinearLayout>
