--- a/android-crmtab/app/src/main/res/layout/fragment_contact_list.xml
+++ b/android-crmtab/app/src/main/res/layout/fragment_contact_list.xml
@@ -6,8 +6,8 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/contact_list"
-        android:background="@color/cardview_light_background"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryDark"/>
 
 </FrameLayout>
