--- a/android-crmtab/app/src/main/res/menu/activity_main_drawer.xml
+++ b/android-crmtab/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,12 +5,12 @@
 
         <item
             android:id="@+id/nav_passer_appel"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_action_users"
             android:title="Mes contacts"/>
 
         <item
             android:id="@+id/agenda"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_action_calendar_month"
             android:title="Mon agenda"/>
 
         <item
