--- a/android-crmtab/app/src/main/res/layout/fragment_detail_phoning_campaign.xml
+++ b/android-crmtab/app/src/main/res/layout/fragment_detail_phoning_campaign.xml
@@ -21,12 +21,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
+
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:textSize="40dp"
-                android:text="@string/create_phoning_campaign_fragment_title_fragment" />
+                android:text="@string/detail_phoning_campaign_fragment_title_fragment" />
 
             <LinearLayout
                 android:layout_marginTop="30dp"
@@ -37,12 +39,15 @@
                 <TextView
                     android:text="@string/create_phoning_campaign_fragment_title"
                     android:layout_width="wrap_content"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
                     android:layout_height="wrap_content" />
 
 
-                <EditText
-                    android:id="@+id/create_phoning_campaign_fragment_title"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/detail_phoning_campaign_fragment_title"
+                    android:layout_width="wrap_content"
+                    android:textSize="20dp"
                     android:minWidth="@dimen/create_customer_min_width_edit_text"
                     android:layout_height="wrap_content" />
 
@@ -57,13 +62,16 @@
                 <TextView
                     android:text="@string/create_phoning_campaign_fragment_campaign_type"
                     android:layout_width="wrap_content"
+                    android:textStyle="bold"
+                    android:textSize="20dp"
                     android:layout_height="wrap_content" />
 
-                <Spinner
-                    android:id="@+id/create_phoning_campaign_fragment_campaign_type"
+                <TextView
+                    android:id="@+id/detail_phoning_campaign_fragment_campaign_type"
                     android:layout_width="wrap_content"
+                    android:textSize="20dp"
                     android:layout_height="wrap_content"
-                    android:prompt="@id/create_phoning_campaign_fragment_campaign_type"></Spinner>
+                    />
 
 
             </LinearLayout>
@@ -76,36 +84,43 @@
                 <TextView
                     android:text="@string/create_phoning_campaign_fragment_objective"
                     android:layout_width="wrap_content"
+                    android:textStyle="bold"
+                    android:textSize="20dp"
                     android:layout_height="wrap_content" />
 
-                <EditText
-                    android:id="@+id/create_phoning_campaign_fragment_objective"
+                <TextView
+                    android:id="@+id/detail_phoning_campaign_fragment_objective"
                     android:layout_width="wrap_content"
+                    android:textSize="20dp"
+                    android:maxLines="4"
+                    android:scrollbars = "vertical"
                     android:minWidth="@dimen/create_customer_min_width_edit_text"
-                    android:inputType="textMultiLine"
-                    android:maxLines="2"
                     android:layout_height="wrap_content" />
+
 
             </LinearLayout>
 
 
 
-                <TextView
-                    android:text="@string/create_phoning_campaign_fragment_list_customer"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+            <TextView
+                android:text="@string/detail_phoning_campaign_fragment_list_customer"
+                android:layout_width="wrap_content"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:layout_height="wrap_content" />
 
-                <ListView
-                    android:id="@+id/create_phoning_campaign_fragment_list_customer"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+            <ListView
+                android:id="@+id/detail_phoning_campaign_fragment_list_customer_contact"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
 
-                <Button
-                    android:id="@+id/create_phoning_campaign_fragment_contact_list_button"
-                    android:text="@string/create_phoning_campaign_fragment_button_contact_list"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/detail_phoning_campaign_fragment_begin_campaign_button"
+                android:text="@string/detail_phoning_campaign_fragment_begin_campaign"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"/>
 
 
         </LinearLayout>
