--- a/android-crmtab/app/src/main/res/xml/sync_adapter.xml
+++ b/android-crmtab/app/src/main/res/xml/sync_adapter.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <sync-adapter xmlns:android="http://schemas.android.com/apk/res/android"
     android:accountType="@string/auth_type"
-    android:allowParallelSyncs="true"
+    android:allowParallelSyncs="false"
     android:contentAuthority="@string/content_authority"
     android:isAlwaysSyncable="true"
     android:supportsUploading="false"
-    android:userVisible="true" />
+    android:userVisible="false" />
