--- a/android-crmtab/app/src/main/res/layout/activity_event_subscription.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_event_subscription.xml
@@ -5,21 +5,52 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
+    android:background="@drawable/social"
     android:padding="20dp"
     tools:context="fr.pds.isintheair.crmtab.view.activity.EventSubscriptionActivity">
 
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/fb_login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+    <LinearLayout
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/user_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="10dp"
-        android:textSize="18sp" />
+
+
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/fb_login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+
+            />
+
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:textSize="18sp" />
+
+        <Button
+            android:layout_width="275dp"
+            android:layout_height="32dp"
+            android:text=" connexion avec Twitter "
+            android:textColor="@color/cardview_light_background"
+            android:background="#1dcaff"
+            android:textSize="20sp"
+            android:onClick="launchTwitterActivity"/>
+
+        <Button
+            android:layout_marginTop="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="historique"
+            android:onClick="search"/>
+
+
+    </LinearLayout>
+
 
 </LinearLayout>
