--- a/android-crmtab/app/src/main/res/layout/addcontact.xml
+++ b/android-crmtab/app/src/main/res/layout/addcontact.xml
@@ -61,9 +61,25 @@
                     <TextView android:layout_width="fill_parent"
                         android:layout_height="match_parent"
                         android:textColor="#372c24"
-                        android:text="@string/contact"/>
+                        android:text="First Name"/>
                     <EditText
-                        android:id="@+id/edittextname"
+                        android:id="@+id/edittextfname"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:background="#f3f3f3"
+                        android:layout_marginTop="5dip"
+                        android:layout_marginBottom="20dip"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_marginRight="@dimen/activity_horizontal_margin"
+                        android:singleLine="true"
+                        />
+
+                    <TextView android:layout_width="fill_parent"
+                        android:layout_height="match_parent"
+                        android:textColor="#372c24"
+                        android:text="Last Name"/>
+                    <EditText
+                        android:id="@+id/edittextlname"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:background="#f3f3f3"
