--- a/android-crmtab/app/src/main/res/layout/activity_admin.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_admin.xml
@@ -15,10 +15,28 @@
     <Button
         android:id="@+id/dump_button"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sauvegarder"/>
+
+    <TextView
+        android:id="@+id/file_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/last_dump_date"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <Button
         android:id="@+id/restore_button"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Restaurer"/>
+
+    <TextView
+        android:id="@+id/last_restore_date"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
 </LinearLayout>
