--- a/android-phonintheair/app/src/main/res/layout/activity_dashboard.xml
+++ b/android-phonintheair/app/src/main/res/layout/activity_dashboard.xml
@@ -14,9 +14,19 @@
                   android:gravity="center"
                   android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/imgStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:src="@drawable/scanning" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
+
+
 
             <TextView
                 android:layout_width="wrap_content"
